assert-struct/tests/snapshots/nested__deeply_nested_comparison_failure.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_comparison_failure.rs:42:24
   |
42 |                 floor: > 10,  // Should fail: 5 is not > 10
   |                        ^^^^ got 5
